0.27.0 - Added formatting option for shfmt instead of running by default.  Added inlineAsNeeded into getData